# sdf2dgen

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  sdf.cpp  sdf.hpp  setup.py  test.cpp
.github/workflows/: cpp_format.yaml  test_core_cpp.yaml
cpp/: sdf.cpp  wrapper.cpp
example/: demo.py
python/pysdf2d/: __init__.py  __init__.pyi
